# SFM

./: CLAUDE.md  README.md  pyproject.toml
decisions/: DR-001-paper-type.md  DR-002-simulator-choice.md  DR-003-queue-model.md  DR-004-initial-scale.md  DR-005-strategy-composition.md  DR-006-danger-zone-validation.md  DR-007-t-base-10ms.md  DR-008-detector-noise-fix.md  DR-009-gpu-probe-recovery.md
docs/: INDEX.md  experiments-guide.md  gpu-simulator-design.md  overview.md  simulation-design.md
experiments/: plots.py  runner.py  s10_load_sensitivity.py  s11_literature_comparison.py  s12_highload_isolation.py  s13_mg1_lor_validation.py  s14_adaptive_differentiation.py  s15_shed_redundancy.py  s1_severity_sweep.py  s2_progressive.py  s3_flash_crowd.py  s4_multi_node.py  s5_fluctuating.py  s6_cascade.py  s7_recovery.py  s8_breaking_point.py  s9_sensitivity.py
experiments/results/: REPORT.md
paper/en/: main.tex  references.bib
paper/zh/: main.tex  references.bib
research/discussions/: v05-detection-direction.md  v06-departure-interval-analysis.md  v07-scaling-direction.md  v14-contribution-assessment.md  v18-adaptive-survival.md  v19-research-directions.md
research/findings/: v01-initial-experiments.md  v02-load-aware.md  v03-md1-detection.md  v04-hybrid-detection.md  v05-persistence-confirmation.md  v06-departure-intervals.md  v06b-shed-damping.md  v07-64node-scaling.md  v08-32node-metrics.md  v09-revert-multinode-pressure.md  v10b-s5-2node-fix.md  (+14 more)
simulator/: __main__.py  config.py  run.py
simulator_gpu/: __init__.py  config.py  metrics.py  run.py  state.py
(+104 files in other folders)
